[project]
name = "llmstat"
dynamic = ["version"]
authors = [
    { name="Timothy Anderton", email="quidditymaster@gmail.com"},
]
license = "MIT"
license-files= ["LICENSE"]

description = "A package for calculating and comparing statistics of textual corpora and LLMs"
readme="README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "llmstat.__version__"}
dependencies = {file = ["requirements.txt"]}

